--- a/client/src/style.css
+++ b/client/src/style.css
@@ -9,3 +9,15 @@
     background-color: rgba(1, 32, 93, 0.6);
     color: white;
 }
+
+.employee_image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.empImg {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+}
